--- a/grid_samples/grid_basic/subgrid/style.css
+++ b/grid_samples/grid_basic/subgrid/style.css
@@ -24,10 +24,12 @@ ul {
   grid-column: 2 / 5;
   grid-row: 1 / 3;
   display: grid;
+  /* 片方だけsubgridで、片方はauto 200px; とかで指定しなおすのもいける */
   grid-template-columns: subgrid;
   grid-template-rows: subgrid;
 }
 
+/* item2~5はsubgridの中なのでmain gridとはライン番号が異なる */
 .item2 {
   grid-column: 1 / 3;
   grid-row: 1;
