Add grid layout styles for sample pages

--- a/grid_samples/layout/dashboard/style.css
+++ b/grid_samples/layout/dashboard/style.css
@@ -44,6 +44,8 @@
     display: grid;
     /* max-content でメニューのテキストに改行が入らないようにする */
     grid-template-columns: minmax(max-content, auto);
+    /* サイドバーでプロフィールアイコンを一番下に寄せて表示するために1frを利用している */
+    /* プロフィールアイコンは暗黙的なグリッドをつかうことで下に寄せて配置される */
     grid-template-rows: auto 1fr;
     /* アニメーション時にスクロールバーが表示されないようにする、かつオーバーフローしたものを表示しない */
     /* まあアニメーション0.5sなのでほぼ分からないが、、、 */
