--- a/grid_samples/assets/reset.css
+++ b/grid_samples/assets/reset.css
@@ -16,24 +16,25 @@ Tailwind CSS
 *,
 ::before,
 ::after {
-	box-sizing: border-box;
-	border-color: currentcolor;
-	border-style: solid;
-	border-width: 0;
+  box-sizing: border-box;
+  border-color: currentcolor;
+  border-style: solid;
+  border-width: 0;
 }
 
 html {
-	font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	line-height: 1.5;
-	-moz-tab-size: 4;
-	tab-size: 4;
-	-webkit-text-size-adjust: 100%;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  tab-size: 4;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
-	margin: 0;
-	line-height: inherit;
+  margin: 0;
+  line-height: inherit;
 }
 
 h1,
@@ -42,27 +43,28 @@ h3,
 h4,
 h5,
 h6 {
-	font-size: inherit;
-	font-weight: inherit;
+  font-size: inherit;
+  font-weight: inherit;
 }
 
 a {
-	color: inherit;
-	text-decoration: inherit;
+  color: inherit;
+  text-decoration: inherit;
 }
 
 code,
 kbd,
 samp,
 pre {
-	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-	font-size: 1em;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  font-size: 1em;
 }
 
 table {
-	text-indent: 0;
-	border-collapse: collapse;
-	border-color: inherit;
+  text-indent: 0;
+  border-collapse: collapse;
+  border-color: inherit;
 }
 
 /* フォーム */
@@ -71,38 +73,38 @@ input,
 optgroup,
 select,
 textarea {
-	margin: 0;
-	padding: 0;
-	font-family: inherit;
-	font-size: 100%;
-	font-variation-settings: inherit;
-	font-weight: inherit;
-	font-feature-settings: inherit;
-	line-height: inherit;
-	color: inherit;
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: 100%;
+  font-variation-settings: inherit;
+  font-weight: inherit;
+  font-feature-settings: inherit;
+  line-height: inherit;
+  color: inherit;
 }
 
 button,
 select {
-	text-transform: none;
+  text-transform: none;
 }
 
 button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-	-webkit-appearance: button;
-	background-color: transparent;
-	background-image: none;
+  -webkit-appearance: button;
+  background-color: transparent;
+  background-image: none;
 }
 
 button,
 [role="button"] {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 textarea {
-	resize: vertical;
+  resize: vertical;
 }
 
 /* デフォルトのマージンやパディングを削除 */
@@ -119,28 +121,28 @@ hr,
 figure,
 p,
 pre {
-	margin: 0;
+  margin: 0;
 }
 
 fieldset {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 legend {
-	padding: 0;
+  padding: 0;
 }
 
 ol,
 ul,
 menu {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 dialog {
-	padding: 0;
+  padding: 0;
 }
 
 /* 埋め込み要素をブロック要素に指定（要素の下に小さなスペースが入るのを防ぐ） */
@@ -152,13 +154,13 @@ audio,
 iframe,
 embed,
 object {
-	display: block;
-	vertical-align: middle;
+  display: block;
+  vertical-align: middle;
 }
 
 /* 画像とビデオを可変サイズに指定 */
 img,
 video {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
