--- a/every_layout/cover/style.css
+++ b/every_layout/cover/style.css
@@ -1,3 +1,8 @@
+/* WARNING:  */
+/* centerはbox-sizing: content-boxを指定しており、同じ要素で併用すると動作がサイズがおかしくなるので */
+/* centerと併用するときはコンポジションしてください */
+
+/* reset */
 *,
 ::after,
 ::before {
