--- a/nextjs_samples/my-app/src/app/globals.css
+++ b/nextjs_samples/my-app/src/app/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #ffffff;
+  --background: #fff;
   --foreground: #171717;
 }
 
@@ -10,9 +10,9 @@ body {
 }
 
 body {
+  font-family: Arial, Helvetica, sans-serif;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -30,7 +30,7 @@ a {
 
 /* reset */
 ul {
-  margin: 0;
   padding: 0;
+  margin: 0;
   list-style: none;
 }
