Refactor grid layout styles and update CSS settings

--- a/tests/gridTable/style.css
+++ b/tests/gridTable/style.css
@@ -52,7 +52,7 @@ table.grid-table {
   }
 }
 
-table.grid-table-color {
+.grid-table.color {
   th {
     background-color: var(--table-head-color);
   }
@@ -69,7 +69,7 @@ table.grid-table-color {
   }
 }
 
-table.grid-table-border {
+.grid-table.border {
   /* border-radiusがbackground-colorに上書きされないようにする */
   overflow: clip;
   border: var(--border);
@@ -82,7 +82,7 @@ table.grid-table-border {
   }
 }
 
-table.grid-table-gap {
+.grid-table.gap {
   gap: var(--table-gap);
 
   tbody,
@@ -92,7 +92,7 @@ table.grid-table-gap {
   }
 }
 
-table.grid-table-left-sticky {
+.grid-table.left-sticky {
   position: relative;
   overflow: auto;
 
