--- a/every_layout/frame/style.css
+++ b/every_layout/frame/style.css
@@ -1,8 +1,6 @@
-/* NOTE:  */
-
-/* frameクラスの子要素は１つだけにする必要あり */
-
-/* 以下２つの設定はグローバルCSS側にまわすべき */
+/* NOTE:  
+   frameクラスの子要素は１つだけにする必要あり
+   以下２つの設定はグローバルCSS側にまわすべき */
 img {
   max-width: 100%;
 }
