--- a/every_layout/sidebar/style.css
+++ b/every_layout/sidebar/style.css
@@ -23,19 +23,16 @@
   /* 折り返されたときに横幅いっぱいに広げる */
   flex-grow: 1;
 
-  /* サイドバーがサイドバーたりうる幅 */
-
-  /* NOTE: flex-basis に何も指定しなければ内在的なサイズになる！サイドバーに画像などを入れる場合はそのほうがよいかも */
+  /* サイドバーがサイドバーたりうる幅
+     NOTE: flex-basis に何も指定しなければ内在的なサイズになる！サイドバーに画像などを入れる場合はそのほうがよいかも */
   flex-basis: 20rem;
 }
 
 /* --- NOTE: last-childを「サイドバーではない方」としていることに注意！！！ --- */
 .with-sidebar > :last-child {
-  /* サイドバーが20rem確保して、残りはサイドバーでない部分が確保する */
-
-  /* NOTE: 厳密にはサイドバーと1: 999の比率でgrowが起きている */
-
-  /* 折り返されたときはサイドバーでない部分を横幅いっぱいに広げる */
+  /* サイドバーが20rem確保して、残りはサイドバーでない部分が確保する
+   * NOTE: 厳密にはサイドバーと1: 999の比率でgrowが起きている
+   *       折り返されたときはサイドバーでない部分を横幅いっぱいに広げる */
   flex-grow: 999;
 
   /* ここを10remとかにすると絶対に折り返されてしまうので0を設定 */
