--- a/every_layout/switcher/style.css
+++ b/every_layout/switcher/style.css
@@ -1,18 +1,3 @@
-:root {
-  --ratio: 1.5;
-  --s-5: calc(var(--s-4) / var(--ratio));
-  --s-4: calc(var(--s-3) / var(--ratio));
-  --s-3: calc(var(--s-2) / var(--ratio));
-  --s-2: calc(var(--s-1) / var(--ratio));
-  --s-1: calc(var(--s0) / var(--ratio));
-  --s0: 1rem;
-  --s1: calc(var(--s0) * var(--ratio));
-  --s2: calc(var(--s1) * var(--ratio));
-  --s3: calc(var(--s2) * var(--ratio));
-  --s4: calc(var(--s3) * var(--ratio));
-  --s5: calc(var(--s4) * var(--ratio));
-}
-
 .switcher {
   display: flex;
   flex-wrap: wrap;
@@ -20,27 +5,22 @@
 
   /* コンテナのサイズのしきい値（コンテナクエリ的な） */
   --threshold: 30rem;
-}
 
-.switcher > * {
-  flex-grow: 1;
+  > * {
+    flex-grow: 1;
 
-  /* calcの結果は、しきい値よりコンテナが大きいと0, 小さいととても大きな正の値になる */
+    /* calcの結果は、しきい値よりコンテナが大きいと0, 小さいととても大きな正の値になる
+       NOTE: flex-basisでは負の値は無視され0になる
+             flex-basisが0だとflex-growにより各要素が均等に引き伸ばされる
+             flex-basisがとても大きい値だと自動的に各要素ごとに折り返しが入る */
+    flex-basis: calc((var(--threshold) - 100%) * 999);
+  }
 
-  /* NOTE: flex-basisでは負の値は無視され0になる */
-
-  /* flex-basisが0だとflex-growにより各要素が均等に引き伸ばされる */
-
-  /* flex-basisがとても大きい値だと自動的に各要素ごとに折り返しが入る */
-  flex-basis: calc((var(--threshold) - 100%) * 999);
-}
-
-/* 5つ以上の子要素があれば垂直方向の配置に切り替え */
-
-/* NOTE: ~は兄弟要素のセレクタ */
-
-/* NOTE: 子要素が4つ以下だと5番目の要素が存在しないのでこのCSSは無効になる */
-.switcher > :nth-last-child(n + 5),
-.switcher > :nth-last-child(n + 5) ~ * {
-  flex-basis: 100%;
+  /* 5つ以上の子要素があれば垂直方向の配置に切り替え
+     NOTE: ~は兄弟要素のセレクタ
+     NOTE: 子要素が4つ以下だと5番目の要素が存在しないのでこのCSSは無効になる */
+  > :nth-last-child(n + 5),
+  > :nth-last-child(n + 5) ~ * {
+    flex-basis: 100%;
+  }
 }
