--- a/every_layout/cover/style.css
+++ b/every_layout/cover/style.css
@@ -1,8 +1,6 @@
-/* WARNING:  */
-
-/* centerはbox-sizing: content-boxを指定しており、同じ要素で併用するとサイズがおかしくなるので */
-
-/* centerと併用するときはコンポジションしてください */
+/* WARNING:
+   centerはbox-sizing: content-boxを指定しており、同じ要素で併用するとサイズがおかしくなるので
+   centerと併用するときはコンポジションしてください */
 
 /* reset */
 *,
@@ -11,36 +9,35 @@
   box-sizing: border-box;
 }
 
+/* NOTE: 中央揃えされる要素に.cover-targetを指定すること！ */
 .cover {
-  --space: var(--s2);
+  --space: var(--s0);
 
   display: flex;
   flex-direction: column;
 
   /* ここのmin-heightの値は適宜変更してよい */
-  min-height: 100svh;
+  min-height: 33svh;
   padding: var(--space);
-}
 
-/* 縦のview portがめちゃ狭くなっても維持するマージンの設定 */
-.cover > * {
-  margin-top: var(--space);
-  margin-bottom: var(--space);
-}
+  /* 縦のview portがめちゃ狭くなっても維持するマージンの設定 */
+  > * {
+    margin-top: var(--space);
+    margin-bottom: var(--space);
+  }
 
-/* NOTE: 下記の h2 要素は好きなものに変えてよい！！ */
+  > .cover-target {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 
-.cover > :first-child:not(h2) {
-  /* first childが中央揃えされる要素でなければ、上部のmarginを削除 */
-  margin-top: 0;
-}
+  > :first-child:not(.cover-target) {
+    /* first childが中央揃えされる要素でなければ、上部のmarginを削除 */
+    margin-top: 0;
+  }
 
-.cover > :last-child:not(h2) {
-  /* last childが中央揃えされる要素でなければ、下部のmarginを削除 */
-  margin-bottom: 0;
-}
-
-.cover > h2 {
-  margin-top: auto;
-  margin-bottom: auto;
+  > :last-child:not(.cover-target) {
+    /* last childが中央揃えされる要素でなければ、下部のmarginを削除 */
+    margin-bottom: 0;
+  }
 }
