--- a/every_layout/frame/style.css
+++ b/every_layout/frame/style.css
@@ -18,10 +18,8 @@ object {
 }
 
 .frame {
-  /* 高さ */
+  /* 高さ, 幅 */
   --n: 9;
-
-  /* 幅 */
   --d: 16;
 
   aspect-ratio: var(--d) / var(--n);
@@ -30,11 +28,18 @@ object {
 
   /* padding-bottom: calc(var(--n) / var(--d) * 100%);
   position: relative; */
+
+  > img,
+  > video {
+    /* NOTE: object-positionのデフォルト設定は50%, 50%になっているのでデフォルトでは画像の真ん中でcropされる */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
 
-/* NOTE: 以下必要性がなさそうだったのでコメントアウト */
-
-/* flexboxを使っているのは、imgやvideoなどの置換要素以外が子になっても中央寄せにしてobject-fitでcropされるようにするため */
+/* NOTE: 以下必要性がなさそうだったのでコメントアウト
+   flexboxを使っているのは、imgやvideoなどの置換要素以外が子になっても中央寄せにしてobject-fitでcropされるようにするため */
 
 /* .frame > * {
   overflow: hidden;
@@ -48,11 +53,3 @@ object {
   justify-content: center;
   align-items: center;
 } */
-
-.frame > img,
-.frame > video {
-  /* NOTE: object-positionのデフォルト設定は50%, 50%になっているのでデフォルトでは画像の真ん中でcropされる */
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
