--- a/every_layout/sidebar/style.css
+++ b/every_layout/sidebar/style.css
@@ -1,43 +1,28 @@
-:root {
-  --ratio: 1.5;
-  --s-5: calc(var(--s-4) / var(--ratio));
-  --s-4: calc(var(--s-3) / var(--ratio));
-  --s-3: calc(var(--s-2) / var(--ratio));
-  --s-2: calc(var(--s-1) / var(--ratio));
-  --s-1: calc(var(--s0) / var(--ratio));
-  --s0: 1rem;
-  --s1: calc(var(--s0) * var(--ratio));
-  --s2: calc(var(--s1) * var(--ratio));
-  --s3: calc(var(--s2) * var(--ratio));
-  --s4: calc(var(--s3) * var(--ratio));
-  --s5: calc(var(--s4) * var(--ratio));
-}
-
 .with-sidebar {
   display: flex;
   flex-wrap: wrap;
   gap: var(--gutter, var(--s1));
-}
 
-.with-sidebar > :first-child {
-  /* 折り返されたときに横幅いっぱいに広げる */
-  flex-grow: 1;
+  > :first-child {
+    /* 折り返されたときに横幅いっぱいに広げる */
+    flex-grow: 1;
 
-  /* サイドバーがサイドバーたりうる幅
-     NOTE: flex-basis に何も指定しなければ内在的なサイズになる！サイドバーに画像などを入れる場合はそのほうがよいかも */
-  flex-basis: 20rem;
-}
+    /* サイドバーがサイドバーたりうる幅
+       NOTE: flex-basis に何も指定しなければ内在的なサイズになる！サイドバーに画像などを入れる場合はそのほうがよいかも */
+    flex-basis: 20rem;
+  }
 
-/* --- NOTE: last-childを「サイドバーではない方」としていることに注意！！！ --- */
-.with-sidebar > :last-child {
-  /* サイドバーが20rem確保して、残りはサイドバーでない部分が確保する
-   * NOTE: 厳密にはサイドバーと1: 999の比率でgrowが起きている
-   *       折り返されたときはサイドバーでない部分を横幅いっぱいに広げる */
-  flex-grow: 999;
+  /* --- NOTE: last-childを「サイドバーではない方」としていることに注意！！！ --- */
+  > :last-child {
+    /* サイドバーが20rem確保して、残りはサイドバーでない部分が確保する
+     * NOTE: 厳密にはサイドバーと1: 999の比率でgrowが起きている
+     *       折り返されたときはサイドバーでない部分を横幅いっぱいに広げる */
+    flex-grow: 999;
 
-  /* ここを10remとかにすると絶対に折り返されてしまうので0を設定 */
-  flex-basis: 0;
+    /* ここを10remとかにすると絶対に折り返されてしまうので0を設定 */
+    flex-basis: 0;
 
-  /* 要素の幅が等しくなったら折り返す */
-  min-width: 50%;
+    /* 要素の幅が等しくなったら折り返す */
+    min-width: 50%;
+  }
 }
